--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
     branches: [master, main]
   pull_request:
     branches: [master, main]
+
 jobs:
   lint_python:
     name: Lint Python Files
@@ -11,19 +12,27 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
-   
+    
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.12
+        # Use Python 3.10 for better stability if 3.12 causes issues
+        python-version: 3.10 
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+    
+    - name: Print working directory
+      run: pwd
+    
     - name: Run Linter
       run: |
+        pwd
+        # Adjust find command to search in the correct directories
         find . -name "*.py" -exec flake8 {} +
-        echo "Linted all the Python files successfully"
+        echo "Linted all the python files successfully"
 
   lint_js:
     name: Lint JavaScript Files
@@ -31,13 +40,18 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
+    
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 14
+        # Use a stable version of Node.js (e.g., 16 or 18)
+        node-version: 16 
+
     - name: Install JSHint
       run: npm install jshint --global
+    
     - name: Run Linter
       run: |
-        find ./server/database -name "*.js" -exec jshint {} +
-        echo "Linted all the JavaScript files successfully"
+        # Adjust the directory path to search for JS files correctly
+        find . -name "*.js" -exec jshint {} +
+        echo "Linted all the js files successfully"
